2003-11-24  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdk.c: Fix compilation error for GTK+-2.0. 
	* sample/gtk-demo/README, ruby-gnome2-logo.png: Added.
	* sample/gtk-demo/pixbufs.rb: Follow API change of Gdk::RGB.draw_rgb_image.
	* src/rbgdk.c, rbgdkdragcontext.c: Fix compilation error for GTK+-2.0. 

2003-11-22  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtk.h: Move version info from rbgtkconst.c.

2003-11-21  Matthew Berg <galt@gothpoodle.com>

	* src/rbgtktreemodelsort.c: Add Gtk::TreeModelSort#iter_is_valid?.

2003-11-21  Masao Mutoh <mutoh@highway.ne.jp>

	* src/rbgdkscreen.c: Remove invalid macros.
	* src/rbgtkconst.c: Update version information.

2003-11-21  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/*.c: use "#if GTK_CHECK_VERSION(2,2,0)" instead of
	"#if GTK_MINOR_VERSION >= 2" for conditional compiling.

2003-11-21  Matthew Berg <galt@gothpoodle.com>

	* src/rbgtktreeselection.c: Gtk::TreeSelection#selected_rows,
   #count_selected_rows, #unselect_range.
	* src/rbgtktreeiter.c: Add Gtk::TreeIter#to_str
	* src/rbgtktreeview.c: Add Gtk::TreeView#set_cursor_on_cell.
	* src/rbgtktreeviewcolumn.c: Add Gtk::TreeViewColumn#focus_cell.

2003-11-20  Masao Mutoh <mutoh@highway.ne.jp>

	* src/rbgdkevent.c: Fix compilation problems for GTK+-2.0.x.

2003-11-18  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgtktextbuffer.c (txt_get_text, txt_get_slice): fix memory
	leaks. Thanks to Hideyasu Yamashita.

2003-11-13  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkliststore.c: Add Gtk::ListStore#iter_is_valid?, #reorder, 
	#swap, #move_before, #move_after.
	* src/rbgtktreestore.c: Add Gtk::TreeStore#iter_is_valid?, #reorder, 
	#swap, #move_before, #move_after.

2003-11-13  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/src/rbgtkstyle.c (style_set_font_desc): Fix to release old
	value and copy new value, to avoid segmentation fault.

2003-11-09  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkwindow.c: Fix a bug of Gdk::Window#pointer 