@@ -1,3 +1,7 @@
+2003-11-27  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* src/rbgdkwindow.c: Gdk::Window#set_cursor accept nil. 
+
 2003-11-24  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* src/rbgdk.c: Fix compilation error for GTK+-2.0. 
